@@ -1,3 +1,8 @@
+2011-01-30 Markus Malkusch <markus@malkusch.de>
+
+    * Autoloader/index/AutoloaderIndex_Memcache.php (AutoloaderIndex_Memcache):
+    Implemented a memcache index
+
 2010-09-05 Markus Malkusch <markus@malkusch.de>
 
     * Autoloader/AbstractAutoloader.php (AbstractAutoloader::_callClassConstructor()):
